# hpc-exam

./: README.md
exercise1/: README.md  setup.py
exercise1/apps/: example.py
exercise1/convert/: convert_collective.py  convert_nbft.py  convert_p2p.py
exercise1/datasets/: bcast_core.csv  bcast_node.csv  bcast_socket.csv  nbft.csv  nbft_reduce.csv  p2p.csv  reduce_core.csv  reduce_node.csv  reduce_socket.csv
exercise1/jobs/: bcast.job  compilation.job  latency.job  nbft.job  nbft_red.job  reduce.job
exercise1/jobs/osu-micro-benchmarks-7.3/: Makefile  config.status
exercise1/notebooks/: Exploratory_Data_Analysis.ipynb  Interactive_Hvplot.ipynb  Report_Graphs.ipynb
exercise1/report/: bibliography.bib  clean.py  info_summary.tex  main.aux  main.bbl  main.tex
exercise1/report/sections/: algorithms.tex  appendix.aux  appendix.tex  architecture.aux  architecture.tex  code_examples.tex  conclusions.tex  fit.aux  fit.tex  introduction.aux  introduction.tex  model.aux  model.tex  openMPI.aux  results.aux  results.tex
exercise1/report/settings/: colors.tex  figures.tex  general.tex  math.tex  toc.tex
exercise1/src/epyc/: __init__.py  core.py  fit.py  mpy.py  node.py  process.py  socket.py
exercise1/src/utils/: __init__.py  plot.py  preprocessing.py
exercise2/: README.md
exercise2/apps/: CMakeLists.txt  mandelbrot.c
exercise2/include/: mandel.h
exercise2/report/: README.md  bibliography.bib  clean.sh  main.aux  main.bbl  main.blg  main.tex
exercise2/report/sections/: conclusions.tex  hyperquicksort.tex  introduction.tex  psrs.aux  psrs.listing  psrs.tex  results.aux  results.tex  serial.tex  simple.aux  (+3 more)
(+36 files in other folders)
